--- a/give.html
+++ b/give.html
@@ -114,7 +114,7 @@ Author: wp-organic
     <div class="container">
       <div class="row">
         <h5 class="sub-heading">
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 					<input type="hidden" name="cmd" value="_s-xclick" />
 					<input type="hidden" name="hosted_button_id" value="QQSK47VBX5SQA" />
 					<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
