corrected Minstries spelling on home page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Author:
 						<li><a href="fellowship.html">Fellowship Night</a></li>
 					</ul>
                 </li>
-				<li><a href="tellUs">Ministeries</a>
+				<li><a href="tellUs">Ministries</a>
 					<ul>
 						<li><a href="ministry.html#mens">Mens Fellowship</a></li>
 						<li><a href="ministry.html#womens">Womens Fellowship</a></li>
